<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

<RelativeLayout

    android:id="@+id/activity_register"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:background="@color/colorAccent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imgPerishable"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/perishable_goods" />

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:drawableLeft="@mipmap/man_user"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/user_fname"
        android:layout_below="@id/txtUserName"
        android:inputType="text"
        android:drawableLeft="@mipmap/man_user"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/user_lname"
        android:layout_below="@id/txtFirstName"
        android:inputType="text"
        android:drawableLeft="@mipmap/man_user"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txtRegPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:hint="@string/password_hint"
        android:drawableLeft="@mipmap/key"
        android:layout_below="@id/txtLastName"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:gravity="center"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtRegPassConfirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:hint="@string/password_hint_2"
        android:drawableLeft="@mipmap/key"
        android:layout_below="@id/txtRegPass"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:gravity="center"
        android:inputType="text" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtRegPassConfirm"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp"
        android:id="@+id/radioGroup" >


    <RadioButton
        android:id="@+id/radio_customer"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_gravity="left"
        android:textColor="@color/colorPrimaryDark"
        android:buttonTint="@color/colorPrimaryDark"
        android:text="@string/buyer_hint"
        android:textSize="16sp"/>

    <RadioButton
        android:id="@+id/radio_seller"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_marginLeft="100dp"
        android:textColor="@color/colorPrimaryDark"
        android:buttonTint="@color/colorPrimaryDark"
        android:text="@string/seller_hint"
        android:textSize="16sp" />
</RadioGroup>

    <Button
        android:id="@+id/bttnReg"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/radioGroup"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:layout_alignParentLeft="true"
        android:layout_gravity="left"
        android:text="@string/save_details"
        android:textSize="16sp" />

    <Button
        android:id="@+id/bttnCancelReg"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/radioGroup"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:layout_gravity="right"
        android:layout_alignParentRight="true"
        android:text="@string/cancel_details"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/registerBar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:indeterminate="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bttnCancelReg"
        android:visibility="gone" />


</RelativeLayout>
</ScrollView>